--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,6 @@
 @config "../tailwind.config.ts";
 @import "swiper/css";
 @import "swiper/css/bundle";
+@import "swiper/css/effect-coverflow";
+@import "swiper/css/pagination";
+@import "swiper/css/navigation";
